@@ -11,22 +11,23 @@
 $style_path = "media/style/MODx/";
 
 // Tree Menu Toolbar
-$_style["expand_tree"] = "<img src=\"".$style_path."images/icons/down.gif\" />";
-$_style["collapse_tree"] = "<img src=\"".$style_path."images/icons/up.gif\" />";
-$_style["add_doc_tree"] = "<img src=\"".$style_path."images/icons/folder_page_add.gif\" />";
-$_style["add_weblink_tree"] = "<img src=\"".$style_path."images/icons/link_add.gif\" />";
-$_style["refresh_tree"] = "<img src=\"".$style_path."images/icons/refresh.gif\" />";
-$_style["sort_tree"] = "<img src=\"".$style_path."images/icons/sort.gif\" />";
-$_style["empty_recycle_bin_empty"] = "<img src=\"".$style_path."images/tree/trash.gif\" />";
-$_style["empty_recycle_bin"] = "<img src=\"".$style_path."images/tree/trash_full.gif\" />";
-$_style["hide_tree"] = "<img src=\"".$style_path."images/icons/close.gif\" />";
+$_style["add_doc_tree"] = "<img src=\"".$style_path."images/icons/folder_page_add.gif\" style=\"width:16px;height:16px\" />";
+$_style["add_weblink_tree"] = "<img src=\"".$style_path."images/icons/link_add.gif\" style=\"width:16px;height:16px\" />";
+$_style["collapse_tree"] = "<img src=\"".$style_path."images/icons/up.gif\" style=\"width:16px;height:16px\" />";
+$_style["empty_recycle_bin"] = "<img src=\"".$style_path."images/tree/trash_full.gif\" style=\"width:16px;height:16px\" />";
+$_style["empty_recycle_bin_empty"] = "<img src=\"".$style_path."images/tree/trash.gif\" style=\"width:16px;height:16px\" />";
+$_style["expand_tree"] = "<img src=\"".$style_path."images/icons/down.gif\" style=\"width:16px;height:16px\" />";
+$_style["hide_tree"] = "<img src=\"".$style_path."images/icons/close.gif\" style=\"width:16px;height:16px\" />";
+$_style["refresh_tree"] = "<img src=\"".$style_path."images/icons/refresh.gif\" style=\"width:16px;height:16px\" />";
 $_style["show_tree"] = $style_path."images/icons/showtree.gif";
+$_style["sort_tree"] = "<img src=\"".$style_path."images/icons/sort.gif\" style=\"width:16px;height:16px\" />";
 
 // Tree Icons
 $_style["tree_deletedpage"] = $style_path."images/tree/deletedpage.gif";
 $_style["tree_folder"] = $style_path."images/tree/folder.gif";
 $_style["tree_folderopen"] = $style_path."images/tree/folderopen.gif";
 $_style["tree_globe"] = $style_path."images/tree/globe.gif";
+$_style["tree_linkgo"] = $style_path."images/tree/link_go.png";
 $_style["tree_minusnode"] = $style_path."images/tree/minusnode.gif";
 $_style["tree_page"] = $style_path."images/tree/page-blank.gif";
 $_style["tree_page_blank"] = $style_path."images/tree/page-blank.gif";
@@ -38,8 +39,6 @@ $_style["tree_page_secure"] = $style_path."images/tree/page-secure.gif";
 $_style["tree_page_xml"] = $style_path."images/tree/page-xml.gif";
 $_style["tree_plusnode"] = $style_path."images/tree/plusnode.gif";
 $_style["tree_showtree"] = "<img src=\"".$style_path."images/tree/sitemap.png\" width=\"16\" height=\"16\" align=\"absmiddle\" />";
-$_style["tree_snippetfolder"] = $style_path."images/tree/snippetfolder.gif";
-$_style["tree_snippetfolderopen"] = $style_path."images/tree/snippetfolderopen.gif";
 $_style["tree_weblink"] = $style_path."images/tree/link_go.png";
 
 // Icons
